// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supermind settings should load data and render correctly 1`] = `
<View>
  <View
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#AEB0B8",
                        "fontSize": 28,
                      },
                      Object {},
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅁
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 24,
                "lineHeight": 32,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                Object {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                Object {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#FFFFFF"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#1B85D6",
                    },
                    Object {
                      "fontFamily": "Roboto-Medium",
                    },
                    Object {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#797B82",
                },
                Object {
                  "fontFamily": "Roboto-Medium",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#B8C1CA",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "justifyContent": "center",
            "minHeight": 100,
          }
        }
      >
        <ActivityIndicator
          color="#1B85D6"
          size="large"
        />
      </View>
      <ActivityIndicator
        color="#B8C1CA"
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`Supermind settings should load data and render correctly 2`] = `
<View>
  <View
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#AEB0B8",
                        "fontSize": 28,
                      },
                      Object {},
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅁
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 24,
                "lineHeight": 32,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                Object {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                Object {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#FFFFFF"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#1B85D6",
                    },
                    Object {
                      "fontFamily": "Roboto-Medium",
                    },
                    Object {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#797B82",
                },
                Object {
                  "fontFamily": "Roboto-Medium",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#B8C1CA",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 16,
            },
            Object {
              "paddingTop": 8,
            },
            Object {
              "backgroundColor": "#1A2025",
            },
            Object {
              "borderTopWidth": 1,
            },
            null,
            Object {
              "borderColor": "#414C57",
            },
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "paddingBottom": 10,
                "paddingTop": 5,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                      },
                      Object {
                        "fontFamily": "Roboto",
                      },
                      Array [
                        Object {
                          "fontFamily": "Roboto",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "marginBottom": 0,
                        },
                        Object {
                          "color": "#B8C1CA",
                        },
                        Array [
                          Object {
                            "color": "#B8C1CA",
                          },
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "paddingLeft": 1,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Tokens
                </Text>
              </View>
            </View>
            <TextInput
              autoCapitalize="none"
              autoFocus={true}
              error=""
              keyboardAppearance="dark"
              keyboardType="numeric"
              labelStyle={
                Array [
                  Object {
                    "color": "#B8C1CA",
                  },
                  Object {
                    "fontSize": 16,
                  },
                  Object {
                    "paddingLeft": 1,
                  },
                  undefined,
                ]
              }
              onChangeText={[Function]}
              placeholderTextColor="#797B82"
              returnKeyType="done"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#414C57",
                    "borderRadius": 2,
                    "borderWidth": 1,
                    "color": "#FFFFFF",
                    "fontFamily": "Roboto",
                    "fontSize": 16,
                    "lineHeight": 21,
                  },
                  Array [
                    Object {
                      "borderWidth": 0,
                      "marginBottom": 7,
                      "paddingHorizontal": 0,
                      "paddingVertical": 6,
                    },
                    Object {
                      "paddingLeft": 1,
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Object {
                      "color": "#FFFFFF",
                    },
                    undefined,
                  ],
                ]
              }
              testID="tokensInput"
              underlineColorAndroid="transparent"
              value="2"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingHorizontal": 16,
            },
            Object {
              "paddingTop": 8,
            },
            Object {
              "backgroundColor": "#1A2025",
            },
            Object {
              "borderTopWidth": 1,
            },
            Object {
              "borderBottomWidth": 1,
            },
            Object {
              "borderColor": "#414C57",
            },
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "paddingBottom": 10,
                "paddingTop": 5,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                      },
                      Object {
                        "fontFamily": "Roboto",
                      },
                      Array [
                        Object {
                          "fontFamily": "Roboto",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "marginBottom": 0,
                        },
                        Object {
                          "color": "#B8C1CA",
                        },
                        Array [
                          Object {
                            "color": "#B8C1CA",
                          },
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "paddingLeft": 1,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  USD
                </Text>
              </View>
            </View>
            <TextInput
              autoCapitalize="none"
              error=""
              keyboardAppearance="dark"
              keyboardType="numeric"
              labelStyle={
                Array [
                  Object {
                    "color": "#B8C1CA",
                  },
                  Object {
                    "fontSize": 16,
                  },
                  Object {
                    "paddingLeft": 1,
                  },
                  undefined,
                ]
              }
              onChangeText={[Function]}
              placeholderTextColor="#797B82"
              returnKeyType="done"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#414C57",
                    "borderRadius": 2,
                    "borderWidth": 1,
                    "color": "#FFFFFF",
                    "fontFamily": "Roboto",
                    "fontSize": 16,
                    "lineHeight": 21,
                  },
                  Array [
                    Object {
                      "borderWidth": 0,
                      "marginBottom": 7,
                      "paddingHorizontal": 0,
                      "paddingVertical": 6,
                    },
                    Object {
                      "paddingLeft": 1,
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Object {
                      "color": "#FFFFFF",
                    },
                    undefined,
                  ],
                ]
              }
              testID="cashInput"
              underlineColorAndroid="transparent"
              value="12"
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Supermind settings should update the store and submit 1`] = `
<View>
  <View
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={9.333333333333332}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 28,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 28,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#AEB0B8",
                        "fontSize": 28,
                      },
                      Object {},
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅁
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "fontFamily": "Roboto-Bold",
              },
              Object {
                "fontSize": 24,
                "lineHeight": 32,
              },
              Object {
                "textAlign": "left",
              },
            ]
          }
        >
          Supermind
        </Text>
      </View>
      <View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
            }
          }
          testID="save"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 100,
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderColor": "transparent",
                  "borderRadius": 4,
                },
                Object {
                  "minHeight": 42,
                  "paddingHorizontal": 24,
                  "paddingVertical": 2,
                },
                undefined,
                Object {
                  "borderRadius": 0,
                  "minHeight": 32,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "transparent",
                  "borderRadius": 100,
                  "borderWidth": 1,
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 0,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  color="#FFFFFF"
                  size="small"
                />
              </View>
            </View>
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.05)",
                  "bottom": 0,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#1B85D6",
                    },
                    Object {
                      "fontFamily": "Roboto-Medium",
                    },
                    Object {
                      "fontSize": 18,
                      "lineHeight": 24,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                Save
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "marginHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#797B82",
                },
                Object {
                  "fontFamily": "Roboto-Medium",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Get paid to reply to your fans.
          </Text>
        </View>
        <View
          style={
            Object {
              "marginVertical": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Set your minimum offer amount
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#B8C1CA",
                },
                Object {
                  "fontFamily": "Roboto",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Fans can’t send you Supermind offers for less than your minimum offer amount.
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "justifyContent": "center",
            "minHeight": 100,
          }
        }
      >
        <ActivityIndicator
          color="#1B85D6"
          size="large"
        />
      </View>
      <ActivityIndicator
        color="#B8C1CA"
      />
    </View>
  </RCTScrollView>
</View>
`;
